# GAMES101-HomeWork

./: .gitignore  CMakeLists.txt  README.md
HW0/: CMakeLists.txt
homework1/: Assignment1.md  CMakeLists.txt  main.cpp
homework2/: CMakeLists.txt  main.cpp  rasterizer.cpp
homework3/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp
homework4/: main.cpp
homework5/: Renderer.cpp  Triangle.hpp
homework6/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Triangle.hpp  main.cpp
homework7/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp  Scene.cpp  Triangle.hpp  global.hpp  main.cpp
homework7/images/: spp_128.ppm  spp_32.ppm  spp_4.ppm
